# uni-project

./: README.md
AOL Personal/Picverse/: about.html  community.html  gallery.html
Semester_1/Algorithm & Programing/AOL/: AOL Case1.c  AOL Case2.c  file.csv
Semester_1/Algorithm & Programing/Array and Pointer/: Z.cpp
Semester_1/Algorithm & Programing/Binary Search/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  Simple Binary Search.cpp
Semester_1/Algorithm & Programing/File/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  testdata_b.in  testdata_c.in  testdata_d.in
Semester_1/Algorithm & Programing/Function/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  Untitled1.cpp  Untitled3.cpp
Semester_1/Algorithm & Programing/Input Output/: AB.cpp  AC.cpp  AD.cpp  AE.cpp  Answer On Last Line.cpp  BELAJAR_LAGI!.cpp  CMakeLists.txt  CandyCrush.cpp  Char To ASCII.cpp  Chemist Structure.sk2  D.cpp  Drug Discovery.cpp  Guest House.cpp  H.cpp  How To Print % And Quote Symbol.cpp  I.cpp  J.cpp  Junior Healer on the Job.cpp  L.cpp  M.cpp  Matrix.cpp  N.cpp  O.cpp  P.cpp  Pangkat.cpp  Q.cpp  R.cpp  S.cpp  Spasi Biar Scanf Pertama Ga Kemakan.cpp  T.cpp  Termometer.cpp  U.cpp  Untitled1.cpp  V.cpp  W.cpp  X.cpp  Y.cpp  Z.cpp  gameproject.cpp  test.cpp
Semester_2/Data Structure/: Array.cpp  BST.cpp  BinTree.cpp  Chrome Tab.cpp  DLL.c  Double Linked List.cpp  DoubleLinkedListTemplate.cpp  Fair Waiting List.docx  Hash (SLL).cpp  JKT48.cpp  SLL.cpp  Struct.cpp  Untitled2.cpp
Semester_2/Sciencetific Computing/: BasicPy.ipynb  pseudo-inverse-normal-equation.ipynb
(+167 files in other folders)
