cmake_minimum_required(VERSION 3.29)
project(Downloads)

set(CMAKE_CXX_STANDARD 14)

add_executable(Downloads
    Repetition/A.cpp
    Repetition/A.exe
    Repetition/AA.cpp
    Repetition/AA.exe
    Repetition/AB.cpp
    Repetition/AB.exe
    Repetition/AC.cpp
    Repetition/AC.exe
    Repetition/AD.cpp
    Repetition/AD.exe
    Repetition/AE.cpp
    Repetition/AF.cpp
    Repetition/AF.exe
    Repetition/AG.cpp
    Repetition/AG.exe
    Repetition/AH.cpp
    Repetition/AH.exe
    Repetition/AI.cpp
    Repetition/AI.exe
    Repetition/AJ.cpp
    Repetition/AK.cpp
    Repetition/AK.exe
    Repetition/AL.cpp
    Repetition/AM.cpp
    Repetition/AN.cpp
    Repetition/AN.exe
    Repetition/AO.cpp
    Repetition/AP.cpp
    Repetition/AQ.cpp
    Repetition/AR.cpp
    Repetition/AR.exe
    Repetition/AS.cpp
    Repetition/AT.cpp
    Repetition/AT.exe
    Repetition/AU.cpp
    Repetition/AX.cpp
    Repetition/AX.exe
    "Repetition/basic array 8 10 24 (1).cpp"
    "Repetition/basic array 8 10 24 (2).cpp"
    "Repetition/basic array 8 10 24.cpp"
    Repetition/E.cpp
    Repetition/E.exe
    Repetition/I.cpp
    Repetition/J.cpp
    Repetition/J.exe
    Repetition/T.cpp
    Repetition/W.cpp
    Repetition/W.exe
    Repetition/X.cpp
    Repetition/Y.cpp
    Repetition/Y.exe
    Repetition/Z.cpp)
